--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,11 @@
 
+.wrapper{
+    width: 100%;
+    height: 100%;
+    margin-top: -20px;
+}
+.word{
+    font-size: 100px;
+    color:white;
+    padding-top: 55%;
+}
